Update and clean up CI pipeline configuration

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,11 +1,8 @@
 name: CodeQL
 
 on:
-  push:
-    branches: [main, development, feature/*]
   pull_request:
-    # The branches below must be a subset of the branches above.
-    branches: [main, development, feature/*]
+  push:
   schedule:
     - cron: 10 22 * * 5
 
@@ -22,24 +19,26 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [cpp, javascript]
-        # https://docs.github.com/en/free-pro-team@latest/github/finding-security-vulnerabilities-and-errors-in-your-code/configuring-code-scanning#changing-the-languages-that-are-analyzed
+        language:
+          - cpp
+          - javascript
 
     steps:
-    - name: Check out repository
-      uses: actions/checkout@v3
+      - name: Check out repository
+        uses: actions/checkout@v3
 
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v1
-      with:
-        languages: ${{ matrix.language }}
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v1
+        with:
+          languages: ${{ matrix.language }}
 
-    - name: Build
-      run: |
-        sudo apt-get update && sudo apt-get install -yq autoconf-archive libboost-test-dev libsdl2-dev
-        ./autogen.sh
-        ./configure
-        make -j $((($(nproc) * 15) / 10))
+      - name: Build
+        run: |
+          sudo apt-get update
+          sudo apt-get install -yq autoconf-archive libboost-test-dev libsdl2-dev
+          ./autogen.sh
+          ./configure
+          make -j $((($(nproc) * 15) / 10))
 
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v1
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v1
