--- a/.github/workflows/devskim-analysis.yml
+++ b/.github/workflows/devskim-analysis.yml
@@ -1,18 +1,10 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: DevSkim
 
 on:
-  push:
-    branches: [main, development, feature/*]
   pull_request:
-    # The branches below must be a subset of the branches above.
-    branches: [main, development, feature/*]
+  push:
   schedule:
-    - cron: "10 22 * * 3"
+    - cron: 10 22 * * 3
 
 jobs:
   lint:
