--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -1,13 +1,11 @@
 name: MSBuild
 
-on: [push, pull_request]
+on:
+  pull_request:
+  push:
 
 env:
-  # Path to the solution file relative to the root of the project.
   SOLUTION_FILE_PATH: msbuild\TrominoPuzzle.sln
-
-  # Configuration type to build.
-  # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
   BUILD_CONFIGURATION: Release
   BUILD_PLATFORM: x64
 
@@ -28,7 +26,10 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: >
         msbuild
-        /m
-        /p:Configuration=${{ env.BUILD_CONFIGURATION }}
-        /p:Platform=${{ env.BUILD_PLATFORM }}
+        -detailedSummary
+        -maxCpuCount
+        -property:Configuration=${{ env.BUILD_CONFIGURATION }}
+        -property:Platform=${{ env.BUILD_PLATFORM }}
+        -validate
+        -warnAsError
         ${{ env.SOLUTION_FILE_PATH }}
