--- a/.github/workflows/emscripten-build.yml
+++ b/.github/workflows/emscripten-build.yml
@@ -84,8 +84,8 @@ jobs:
           if [[ $(git diff --stat) != '' ]]; then
             git config --global user.name 'Continuous Deployment Job'
             git config --global user.email 'oboukli@users.noreply.github.com'
-            git add -A
-            git commit --amend -am 'Automated deployment'
+            git add --all
+            git commit --amend --all --date=now --message= 'Automated deployment'
             git push --force
           else
             echo 'No web app changes found. Publish step skipped.'
