--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=oboukli_tromino-puzzle
 sonar.projectName=tromino-puzzle
 sonar.organization=oboukli
 
-sonar.sources=src/, emscripten/app/
+sonar.sources=src/
 sonar.tests=test/
 sonar.sourceEncoding=UTF-8
 sonar.scm.enabled=true
