--- a/.editorconfig
+++ b/.editorconfig
@@ -28,7 +28,7 @@ insert_final_newline = true
 max_line_length = 80
 trim_trailing_whitespace = true
 
-[*.{css}]
+[*.css]
 charset = utf-8
 end_of_line = lf
 indent_size = 2
