--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -18,6 +18,30 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v3
 
+    - name: Check out vcpkg
+      uses: actions/checkout@v3
+      with:
+        repository: microsoft/vcpkg
+        path: ${{ github.workspace }}\vcpkg
+
+    - name: Bootstrap vcpkg
+      run: .\vcpkg\bootstrap-vcpkg.bat -disableMetrics
+
+    - name: Apply vcpkg cache
+      id: vcpkg-cache
+      uses: actions/cache@v2
+      with:
+        path: |
+          %VCPKG_DEFAULT_BINARY_CACHE%
+          ${{ github.workspace }}\vcpkg
+        key: >-
+          ${{ runner.os }}-vcpkg-archives-cache-${{ hashFiles(
+            'vcpkg\CHANGELOG.md'
+          ) }}
+
+    - name: Install boost-test
+      run: vcpkg\vcpkg install boost-test --triplet x64-windows
+
     - name: Set up MSBuild
       uses: microsoft/setup-msbuild@v1.0.2
 
